# khaleesi

./: .gitignore  .travis.yml  .travis.yml.disabled  Cargo.toml  README.md  build.rs  event.ics  event_mult.ics  sample_agenda
.circleci/: config.yml
.circleci/images/rust-libical3/: Dockerfile
.circleci/images/rust-libical3-kcov/: Dockerfile
src/: agenda.rs  backup.rs  bucketable.rs  cal.rs  calendars.rs  calutil.rs  cli.rs  config.rs  copy.rs  cursorfile.rs  dateutil.rs  defaults.rs  edit.rs  errors.rs  grep.rs  icalwrap.rs  index.rs  indextime.rs  input.rs  khevent.rs  khline.rs  lib.rs  list.rs  lock.rs  macros.rs  main.rs  modify.rs  new.rs  prettyprint.rs  select.rs  selectors.rs  seq.rs  seqfile.rs  show.rs  sort.rs  testdata.rs  testutils.rs  unroll.rs  utils.rs
src/actions/: agenda.rs  cal.rs  calendars.rs  copy.rs  cursor.rs  delete.rs  edit.rs  gen_completions.rs  get.rs  list.rs  mod.rs  modify.rs  new.rs  prettyprint.rs  select.rs  seq.rs  show.rs  undo.rs  unroll.rs
src/actions/index/: action.rs  bucketable.rs  (+2 more)
src/ical/: mod.rs
src/icalwrap/: icalcomponent.rs  icalduration.rs  icalproperty.rs  icaltime.rs  icaltimezone.rs  icalvcalendar.rs  icalvevent.rs  mod.rs
src/selectors/: cal.rs  daterange.rs  grep.rs  mod.rs  prop.rs  range.rs  test.rs
src/utils/: dateutil.rs  fileutil.rs  lock.rs  misc.rs  mod.rs  stdioutils.rs
testdata/: .gitignore
testdata/rfc_examples/: rfc_multi_day_allday.ics
testdata/testdir_config/: config.toml
testdata/testdir_with_seq/: seq
testdata/testdir_with_seq_and_cursor/: cursor  seq
testdata/testdir_with_xlicerror/: seq
tests/: integration.rs
(+6 files in other folders)
