[package]
name = "khaleesi"
version = "0.1.0"
authors = ["Nora <nora.widdecke@tu-bs.de>"]

[dependencies]
libc = "0.2.43"
chrono = "0.4"
itertools = "0.7.8"
log = "0.4.5"
yansi = "0.4.0"
indoc = "0.2.8"
stderrlog = "0.4"
atty = "0.2"
walkdir = "2.2.7"
libical-sys = "0.1.1"
toml = "0.4.2"
serde = "1.0.82"
serde_derive = "1.0.82"
tempfile = "3.0.5"
uuid = { version = "0.7", features = ["v4"] }
fs2 = "0.4.3"
lazy_static = "1.2.0"
backtrace = "0.3"

[dev-dependencies]
assert_fs = "0.10.1"
predicates = "1.0"
maplit = "1.0.1"
